gb200/image-preload-ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: image-preload
  labels:
    app: image-preload
spec:
  selector:
    matchLabels:
      app: image-preload
  template:
    metadata:
      labels:
        app: image-preload
    spec:
      nodeSelector:
        oci.oraclecloud.com/rack-name: oci-bth-aiaccelerator-prd005-hpc-rack-1
      containers:
        - name: done
          image: busybox
          command: ["sleep", "infinity"]
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 10m
              memory: 64Mi
