gb200/model-cache-ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: model-cache
spec:
  selector:
    matchLabels:
      app: model-cache
  template:
    metadata:
      labels:
        app: model-cache
    spec:
      nodeSelector:
        nvidia.com/gpu.present: "true"
      containers:
        - name: idle
          image: quay.io/tms/llm-d-cuda-dev:0e22cd6-07e22e2-00a944e
          command: ["sleep", "infinity"]
          resources:
            requests:
              cpu: 1m
              memory: 16Mi
            limits:
              cpu: 1m
              memory: 16Mi
      volumes:
        - name: local-nvme
          hostPath:
            path: /mnt/numa0
            type: Directory
