gb200/httproute.yaml
# HTTPRoute for GB200 decode-bench InferencePool
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${DEPLOY_NAME}-route
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: ${DEPLOY_NAME}-inference-gateway
  rules:
  - backendRefs:
    - group: inference.networking.k8s.io
      kind: InferencePool
      name: ${DEPLOY_NAME}-infpool
      port: 8000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /v1/
    timeouts:
      backendRequest: "0s"
      request: "0s"
